GPII-153: Animation is now coordinated (punctuationVerbosity doesn't disappear after everything else). Fixed bug with unexpectedly increasing gap under the header.

--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -34,9 +34,18 @@
     font-family: 'optionsIcons'
 }
 
+.spacing-ensurer {
+    height: 65px;
+    width: 0px;
+}
+
+.speakText-screenReaderTTSEnabled-element {
+    padding-top: 1px;
+    height: 55px;
+}
+
 .more-options-icon:before {
     content: "\e009";
-    cursor: pointer;
 }
 
 .preference {
@@ -57,6 +66,7 @@
 
 .speech-rate-class {
     position: relative;
+    padding-top: 15px;
 }
 
 #speechRate {
@@ -86,7 +96,6 @@ textarea:focus, input:focus {
 
 .more-options {
     padding-top: 20px;
-    cursor:pointer;
     font-size: 15px;
     font-weight: bold;
     margin-left: 90px;
@@ -131,6 +140,7 @@ input[type="radio"] + label {
 }
 
 div.punctuationVerbosity-container {
+    position: relative;
     height: 55px;
     width: 250px;
     background-color: #CEDBDD;
@@ -370,7 +380,7 @@ input[type=checkbox]:checked + label.checkbox-label:before {
     padding-left: 5px;
 }
 
-input[type=checkbox] + label.more-options-label {
+label.more-options-label {
     cursor: pointer;
 }
 
